# pro

./: Cargo.toml  Justfile  Make.toml  serve.rs
ext/: go.mod  main.go
lib/prcfg/: Cargo.toml
lib/prcfg/src/: config.rs  error.rs  lib.rs
lib/prcfg/src/config/: group.rs  inst.rs  local.rs  meta.rs  rt.rs  shell.rs  ui.rs
lib/prcli/: Cargo.toml
lib/prcli/src/: cli.rs  error.rs  lib.rs
lib/prcli/src/cli/: cmd.rs
lib/prcli/src/cli/cmd/: add.rs  bld.rs  cfg.rs  edit.rs  gen.rs  help.rs  id.rs  init.rs  ls.rs  new.rs  run.rs  setup.rs  sh.rs
lib/prcli/src/cli/sh/: mod.rs
lib/prcli/src/util/: mod.rs
lib/prcore/: Cargo.toml
lib/prcore/src/: cache.rs  lib.rs  util.rs
lib/prderive/: Cargo.toml
lib/prparse/: Cargo.toml
lib/prparse/src/: error.rs  lib.rs
lib/prrt/: Cargo.toml
src/: lib.rs
